--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,22 @@
 {
   "cSpell.words": [
+    "Alarmtext",
+    "Alarmtime",
     "closeappweb",
     "commandprompt",
+    "currenttime",
+    "deletetime",
     "Dictapp",
+    "extractedtime",
     "Neawe",
     "openappweb",
     "pyautogui",
-    "pyttsx"
+    "pyttsx",
+    "startfile",
+    "timehere",
+    "timenow",
+    "timeset",
+    "volumedown",
+    "volumeup"
   ]
 }
