--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,12 +2,15 @@
   "cSpell.words": [
     "Alarmtext",
     "Alarmtime",
+    "choosen",
     "closeappweb",
     "commandprompt",
     "currenttime",
     "deletetime",
     "Dictapp",
     "extractedtime",
+    "favourite",
+    "latestnews",
     "Neawe",
     "openappweb",
     "pyautogui",
